--- a/main.css
+++ b/main.css
@@ -13,11 +13,11 @@ body {
   display: inherit;
   /* margin: 0 auto; */
   padding-bottom: 50px;
-  display: flex;
   justify-content: space-around;
   width: 100%;
   text-align: center;
   background: rgb(34, 40, 49);
+  /* background: white; */
 }
 
 #gameCode {
@@ -78,10 +78,6 @@ body {
   padding-bottom: 0.25vw;
   border-radius: 5px;
 
-  /* display: inline-block;
-  float: left;
-  clear: left; */
-
   display: table;
 }
 
@@ -91,26 +87,14 @@ body {
   margin: 0 auto;
 }
 
-/* forms */
 form {
   color: white;
   position: relative;
-  flex-wrap: wrap; /* Optional. only if you want the items to wrap */
-  justify-content: center; /* For horizontal alignment */
-  align-items: center; /* For vertical alignment */
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
-/* .label {
-  display: inline-block;
-  float: left;
-  clear: left;
-  width: 250px;
-  text-align: left;
-}
-*/
-.input {
-  /* display: inline-block; */
-  /* float: right; */
-}
+
 p {
   color: white;
 }
@@ -118,4 +102,15 @@ p {
 .break {
   flex-basis: 100%;
   height: 0vw;
+}
+
+h1 {
+  background: linear-gradient(
+    45deg,
+    rgba(109, 124, 255, 1) 0%,
+    rgba(147, 109, 255, 1) 57%,
+    rgba(255, 109, 228, 1) 100%
+  );
+  font-family: "Work Sans", sans-serif;
+  font-size: 5vw;
 }
